--- a/composer.json
+++ b/composer.json
@@ -1,39 +1,36 @@
 {
-    "name": "phoenix/eloquent-meta",
-    "description": "Attach meta data to Eloquent models",
-    "keywords": ["eloquent", "laravel", "meta"],
-    "homepage": "https://github.com/phoenix-labs/eloquent-meta",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Michael Wilson",
-            "email": "phoenixlabsdev@gmail.com"
-        },
-        {
-            "name": "Boris Glumpler",
-            "email": "tech@scubaclick.com"
-        }
+  "name": "phoenix/eloquent-meta",
+  "description": "Attach meta data to Eloquent models",
+  "keywords": ["eloquent", "laravel", "meta"],
+  "homepage": "https://github.com/phoenix-labs/eloquent-meta",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Michael Wilson",
+      "email": "phoenixlabsdev@gmail.com"
+    },
+    {
+      "name": "Boris Glumpler",
+      "email": "tech@scubaclick.com"
+    }
+  ],
+  "require": {
+    "php": ">=5.6.4",
+    "illuminate/database": "5.4.*|5.5.*|5.6.*|5.7.*|5.8.*"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "4.4.*"
+  },
+  "autoload": {
+    "classmap": [
+      "src/migrations"
     ],
-    "require": {
-        "php": ">=5.4.0",
-        "illuminate/support": "5.*",
-        "nesbot/carbon": "1.*",
-	    "illuminate/database": "5.*",
-        "illuminate/validation": "5.*",
-        "illuminate/translation": "5.*"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "4.4.*",
-        "illuminate/console": "5.*",
-        "illuminate/filesystem": "5.*"
-    },
-    "autoload": {
-        "classmap": [
-            "src/migrations"
-        ],
-        "psr-0": {
-            "Phoenix\\EloquentMeta": "src/"
-        }
-    },
-    "minimum-stability": "dev"
+    "psr-4": {
+      "Phoenix\\EloquentMeta\\": "src/Phoenix/EloquentMeta/"
+    }
+  },
+  "autoload-dev": {
+    "Phoenix\\EloquentMeta\\Test\\": "tests/"
+  },
+  "minimum-stability": "dev"
 }
